[package]
name = "zenith"
version = "0.1.0"
edition = "2021"
authors = ["nar1nari"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
leptos = { version = "0.8", features = ["csr"] }
leptos_meta = { version = "0.8" }
leptos_router = { version = "0.8" }
console_log = "1"
log = "0.4"
console_error_panic_hook = "0.1"
cities = "0.2.0"
siderust = "0.3.3"
web-sys = { version = "0.3", features = ["CanvasRenderingContext2d"] }
chrono = "0.4.42"
leptos-use = "0.16.3"

# utils
# strum = { version = "0.25", features = ["derive", "strum_macros"] }
# strum_macros = "0.25"


[dev-dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-test = "0.3"
web-sys = { version = "0.3", features = ["CanvasRenderingContext2d", "Document", "Window"] }


[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
panic = "abort"
